# kneron

./: README.md
KL520_Dongle_Ubuntu1804/host_lib/: CMakeLists.txt  README_CPP.md  README_Python.md  version.txt
KL520_Dongle_Ubuntu1804/host_lib/app_binaries/KL520/: readme.txt
KL520_Dongle_Ubuntu1804/host_lib/common/include/: base.h  com.h  com_err.h  common.h  ipc.h  kapp_id.h  model_res.h  model_result.h
KL520_Dongle_Ubuntu1804/host_lib/common/include/khost/: khost_ipc_generic.h  khost_ipc_inf_app_fd_age_gender.h  khost_ipc_inf_app_person_detection.h  khost_ipc_inf_app_tiny_yolo.h  khost_ipc_sys_version.h
KL520_Dongle_Ubuntu1804/host_lib/example/: CMakeLists.txt
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/: kdpio.h  main.cpp  post_processing_ex.c  post_processing_ex.h  user_util.cpp  user_util.h
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_dme_serial_ssd_fd/: kl520_cam_dme_serial_ssd_fd.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_dme_serial_yolo/: kl520_cam_dme_serial_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_isi_async_parallel_post_host_yolo/: kl520_cam_isi_async_parallel_post_host_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_isi_async_parallel_yolo/: kl520_cam_isi_async_parallel_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_isi_async_ssd_fd/: CMakeLists.txt  kl520_cam_isi_async_ssd_fd.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_isi_async_yolo/: kl520_cam_isi_async_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_cam_isi_serial_yolo/: kl520_cam_isi_serial_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_dme_async_yolo/: kl520_dme_async_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_dme_serial_yolo/: kl520_dme_serial_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_dme_yolo_multiple_dongles/: kl520_dme_yolo_multiple_dongles.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_get_crc/: kl520_get_crc.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_get_kn_num/: kl520_get_kn_num.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_get_model_info/: kl520_get_model_info.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_get_nef_model_metadata/: kl520_get_nef_model_metadata.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_isi_async_bypass_pre_post_host_yolo/: kl520_isi_async_bypass_pre_post_host_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_isi_async_parallel_yolo/: CMakeLists.txt  kl520_isi_async_parallel_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_isi_async_ssd_fd/: kl520_isi_async_ssd_fd.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_isi_async_yolo/: kl520_isi_async_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_isi_serial_yolo/: kl520_isi_serial_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_soft_reset/: kl520_soft_reset.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_update_app_nef_model/: kl520_update_app_nef_model.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_update_fw/: kl520_update_fw.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_update_nef_model/: kl520_update_nef_model.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL520/kl520_util_uart_dfw_boot/: CMakeLists.txt  crc16.cpp  crc16.h  kl520_util_uart_dfw_boot.cpp  xmodem.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/: CMakeLists.txt  kdpio.h  main.cpp  post_processing_ex.c  post_processing_ex.h  user_test.h  user_util.cpp  user_util.h
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_cam_isi_center_app/: CMakeLists.txt  kl720_cam_isi_center_app.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_dme_async_yolo/: CMakeLists.txt  kl720_dme_async_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_dme_serial_yolo/: kl720_dme_serial_yolo.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_fid_start/: kl720_fid_start.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_get_kn_num/: kl720_get_kn_num.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_get_model_info/: kl720_get_model_info.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_get_nef_model_metadata/: kl720_get_nef_model_metadata.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_isi_center_app/: CMakeLists.txt  kl720_isi_center_app.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_isi_fid/: kl720_isi_fid.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_jpeg_dec/: kl720_jpeg_dec.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_jpeg_enc/: CMakeLists.txt  kl720_jpeg_enc.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_update_app_nef_model/: kl720_update_app_nef_model.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_update_fw/: CMakeLists.txt  kl720_update_fw.cpp
KL520_Dongle_Ubuntu1804/host_lib/example/KL720/kl720_update_nef_model/: kl720_update_nef_model.cpp
KL520_Dongle_Ubuntu1804/host_lib/kdp2/: CMakeLists.txt
KL520_Dongle_Ubuntu1804/host_lib/kdp2/examples/: CMakeLists.txt
KL520_Dongle_Ubuntu1804/host_lib/kdp2/include/: kdp2_app.h  kdp2_core.h  kdp2_postprocess.h  kdp2_struct.h
KL520_Dongle_Ubuntu1804/host_lib/kdp2/src/: CMakeLists.txt  kdp2_app.c  kdp2_core.c  kdp2_ll.c  kdp2_postprocess.c  kneron_nef_reader.c
KL520_Dongle_Ubuntu1804/host_lib/python/common/: constants_kl720.py
KL520_Dongle_Ubuntu1804/host_lib/src/: BaseDev.cpp  CMakeLists.txt  KdpHostApi.cpp  KnLog.cpp  KnMsg.cpp  KnUtil.cpp  MsgMgmt.cpp  MsgReceiver.cpp  MsgSender.cpp  MsgXBase.cpp  SyncMsgHandler.cpp  UARTDev.cpp  UARTPkt.cpp  USBDev.cpp  khost_api.cpp  khost_ll.cpp  kneron_nef_reader.c
KL520_Dongle_Ubuntu1804/host_lib/src/include/: BaseDev.h  KdpHostApi.h  KnLog.h  KnMsg.h  KnUtil.h  MsgMgmt.h  MsgReceiver.h  MsgSender.h  MsgXBase.h  SyncMsgHandler.h  UARTDev.h  UARTPkt.h  USBDev.h  async_test.h  err_code.h  kdp_host.h  kdp_host_async.h  khost.h  khost_api.h  khost_ll.h  kneron_nef_reader.h
Kneron_DFUT/: KneronDFUT.sh
(+53 files in other folders)
